--- a/AndroidPinchGestureIssue/AndroidPinchGestureIssue.csproj
+++ b/AndroidPinchGestureIssue/AndroidPinchGestureIssue.csproj
@@ -11,6 +11,8 @@
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 
+	    <LangVersion>12</LangVersion>
+
 		<!-- Display name -->
 		<ApplicationTitle>AndroidPinchGestureIssue</ApplicationTitle>
 
